fix: platforms list wrap

--- a/rsschool-react/src/components/GameDetails/GameDetails.module.css
+++ b/rsschool-react/src/components/GameDetails/GameDetails.module.css
@@ -32,6 +32,7 @@
 
 .platforms {
   display: flex;
+  flex-wrap: wrap;
   column-gap: 0.5rem;
   padding: 0.5rem 0 1rem;
 }
